--- a/src/main/java/rsrc/UIs/UiInstaller.fxml
+++ b/src/main/java/rsrc/UIs/UiInstaller.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
@@ -11,16 +12,29 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.241" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sunproject.mineboot.installer.ui.InstUiController">
    <bottom>
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <buttons>
+      <HBox alignment="CENTER_RIGHT" prefHeight="34.0" prefWidth="600.0" spacing="5.0">
+         <children>
+            <HBox fx:id="loadingStatus" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="218.0" spacing="5.0" visible="false" HBox.hgrow="ALWAYS">
+               <children>
+                  <ImageView fitHeight="21.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@assets/téléchargement.gif" />
+                     </image>
+                  </ImageView>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Loading ..." />
+               </children>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </HBox>
           <Button fx:id="btn_previous" disable="true" mnemonicParsing="false" text="Previous" />
             <Button fx:id="btn_next" defaultButton="true" disable="true" mnemonicParsing="false" text="Next" />
             <Button fx:id="btn_cancel" cancelButton="true" disable="true" mnemonicParsing="false" text="Cancel" />
-        </buttons>
+         </children>
          <padding>
-            <Insets left="10.0" right="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
-      </ButtonBar>
+      </HBox>
    </bottom>
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="55.0" prefWidth="600.0" styleClass="instHeader" BorderPane.alignment="CENTER">
