--- a/src/main/resources/rsrc/UIs/UiInstaller.fxml
+++ b/src/main/resources/rsrc/UIs/UiInstaller.fxml
@@ -18,7 +18,7 @@
                <children>
                   <ImageView fitHeight="21.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@assets/téléchargement.gif" />
+                        <Image url="@assets/loading.gif" />
                      </image>
                   </ImageView>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Loading ..." />
